--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -350,6 +350,10 @@
 
   </div>
 
+  <!-- Angular Tour - Heroes -->
+  <h2>Angular Tour - Heroes</h2>
+  <app-heroes></app-heroes>
+
   <!-- Resources -->
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
@@ -385,7 +389,7 @@
     </a>
 
   </div>
-
+  <!-- <app-root></app-root> -->
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
