HeroService, MessageServie added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,6 +353,7 @@
   <!-- Angular Tour - Heroes -->
   <h2>Angular Tour - Heroes</h2>
   <app-heroes></app-heroes>
+  <app-messages></app-messages>
 
   <!-- Resources -->
   <h2>Resources</h2>
